--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
