--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-google-maps": "^9.4.5",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
   },
   "scripts": {
     "start": "react-scripts start",
