--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-loading": "^2.0.3",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
