--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
