--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuidv4": "^6.0.8"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
