--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,8 +15,10 @@
     "react-google-places-autocomplete": "^2.0.1",
     "react-loading": "^2.0.3",
     "react-places-autocomplete": "^7.2.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux-saga": "^1.1.3",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
